Adding Swagger Doc for endpoint
