# endpoints/users/POSTCreateUser.go
@@ -12,10 +12,9 @@ import (
 //	@Description	Create new user in DB
 //	@Produce		json
 //	@Param			body	body		usersmodels.User	true	"User Data"
-//	@Success		201		{string}	{object}			usersmodels.UserObject
-//	@Failure		400		{string}	string				"invalid user object； invalid to create user"
+//	@Success		201		{object}	usersmodels.UserObject
+//	@Failure		400		{string}	string	"invalid user object； invalid to create user"
 //	@Router			/users/ [post]
-
 func (ue *UsersEndpoints) CreateUser(c *gin.Context) {
 	var newUser usersmodels.User
 	if err := c.ShouldBindJSON(&newUser); err != nil {
